--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:usesCleartextTraffic="true"
         android:windowSoftInputMode="adjustResize">
         <activity
-            android:name=".MainActivity"
+            android:name=".health_record"
             android:label="@string/app_name" >
                 <intent-filter>
                     <action android:name="android.intent.action.MAIN" />
